--- a/themes/colors/css-1.7.5/style.css
+++ b/themes/colors/css-1.7.5/style.css
@@ -1712,6 +1712,10 @@ a:hover .nameZoom {
 	padding-right: 3px;
 }
 
+.blockhc h2 {
+	margin: 0;
+}
+
 [dir=rtl] .blockh1 {
 	background-image: url(images/right1B.png);
 }
